DownloadManager: Start download timer when download is created

Since we block in download options / file dialogs and QtWebEngine
download is already running, it will report invalid (faster) download
speed.

BUG: 401661
FIXED-IN: 3.1.0